--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://mattangelolim.github.io/portfolio",
+  "homepage":"https://mattangelolim.github.io/e-port",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
